tests/errors/counter_output.ti
interface counter_output {
  uses command char init();
  uses command void output(int value);
  defines event char output_complete(char success);
}
